# AIClient-2-API

./: .gitignore  .golangci.yml  2598_analysis.md  ALL-FIXES-APPLIED.md  BUILD-ARTIFACTS.md  BUILD-FIXES-SUMMARY.md  BUILD.md  CHECK-ERRORS.md  CLAUDE.md  CLINE_ERROR_FIX.md  COMPILE-FIXES.md  COMPLETE.md  CONTRIBUTING.md  CONVERSION-SUMMARY.md  DEPLOYMENT-GUIDE.md  Dockerfile.go  FINAL-PROJECT-STATUS.md  FINAL-REVIEW.md  FINAL-STATUS.md  FIXED_NOW_TEST.md  GITHUB-ACTIONS-STATUS.md  GITHUB-ACTIONS-TROUBLESHOOTING.md  GO-FILES.md  GO-VERSION-STATUS.md  GOFMT-FIXED.md  KIRO-IMPLEMENTATION.md  MIGRATION.md  OPTIMIZATION-CHECKLIST.md  OPTIMIZATION-COMPLETED.md  PROJECT-COMPLETION-SUMMARY.md  PROJECT-SUMMARY.txt  QUICK-FIX.md  QUICKSTART-GO.md  QUICK_FIX_STEPS.md  README-GO-BADGES.md  README-GO.md  README.md  RELEASE-NOTES-v0.9.0.md  RUST_VERSION_README.md  SOLUTION.md  (+14 more)
.claude/: settings.local.json
.github/workflows/: build.yml  lint.yml  rust-build.yml  security.yml
internal/adapter/: adapter.go  claude.go  gemini.go  kiro.go  openai.go  qwen.go
internal/common/: config.go  constants.go  (+2 more)
rust/: .gitignore  ARCHITECTURE.md  BUILD_AND_RUN.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_REPORT.md  Dockerfile  FEATURES_IMPLEMENTED.md  FILES_MANIFEST.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_RUST.md  KIRO_DEBUG_GUIDE.md  KIRO_PERFORMANCE_ANALYSIS.md  KIRO_USAGE_GUIDE_ZH.md  Makefile  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QUICKSTART.md  QUICK_START_OPTIMIZED.md  README.md  README_ZH.md  RUN_KIRO.md  config.example.json  docker-compose.yml  provider_pools.example.json  restart.sh  run-kiro-debug.sh  run-kiro.sh  test_kiro_response.sh  性能优化总结_中文.md
rust/scripts/: build.sh  dev.sh  docker-build.sh  test.sh
rust/src/: adapter.rs  common.rs  config.rs  convert.rs  convert_detailed.rs  lib.rs  logger.rs  main.rs  pool_manager.rs  server.rs  strategies.rs  system_prompt.rs
rust/src/providers/: claude.rs  gemini.rs  kiro.rs  mod.rs  openai.rs  qwen.rs
rust/tests/: conversion_tests.rs  integration_tests.rs  logger_tests.rs  provider_tests.rs  system_prompt_tests.rs
src/: api-server.js  common.js
(+7 files in other folders)
